--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <span>A</span>
     </div>
     <div class="description">
-        <span>buat kamu sayangkuu</span>
+        <span>akwkwkwk nihh buat kamuuu</span>
     </div>
     <div class="button">
         <button class="botones">
-            <a href="flower.html" style="color: #fff;">klik disini beb</a>
+            <a href="flower.html" style="color: #fff;">klik dong</a>
         </button>
     </div>
 
